--- a/resources/public/stylesheets/wildfire/content/edit.css
+++ b/resources/public/stylesheets/wildfire/content/edit.css
@@ -25,6 +25,6 @@
   width:50%;
 }
 
-.intro_block_content input[type=submit]{
+.form-submit input[type=submit]{
   margin:20px 0 0 20px;
 }
