--- a/resources/public/stylesheets/wildfire/content/meta_tabs.css
+++ b/resources/public/stylesheets/wildfire/content/meta_tabs.css
@@ -8,18 +8,21 @@
       .meta_tabs .meta-tab-title span{
         display:block;
       }
-      .meta_tabs .meta-tab-title.ui-state-default{
-        background:none;
-      }
+      .meta_tabs .meta-tab-title.ui-state-default,
       .meta_tabs .meta-tab-title:hover{
         background:#dfdfdf;
+        font-size:123.1%;
+        font-weight: bold;
       }
+        .meta_tabs .meta-tab-title:hover{
+          color:#136ea2;
+        }
       .meta_tabs .meta-tab-title.ui-state-active{
         background:white;
         margin-top:10px;
         padding-bottom:0;
         color:#136ea2;
-        font-size:123.1%;
+
         font-weight:bold;
         border-top:1px solid #dbdbdb;
         border-left:1px solid #dbdbdb;
@@ -70,3 +73,8 @@
         padding-left:20px;
       }
       .meta_tabs .language-list .operations{display:none;}
+
+  .multipleselect ul{
+    max-height: 250px;
+    overflow: auto;
+  }
